--- a/index.html
+++ b/index.html
@@ -14,10 +14,20 @@
   </head>
   <body>
     <main class="container">
-      <div class="row">
-        <div class="col-4 border">1</div>
+      <div class="row align-items-center">
+        <div class="col-lg-12">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+              <img
+                src="/docs/5.0/assets/brand/bootstrap-logo.svg"
+                alt=""
+                width="30"
+                height="24"
+              />Wow Content
+            </a>
+          </nav>
+        </div>
       </div>
-      <h1>Presentaciones Wow</h1>
     </main>
   </body>
 </html>
