--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,12 @@
       name="web wow content "
       content="Web site created using React + Bootstrap"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
     <title>React App</title>
   </head>
   <body>
