--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="web oh! presentaciones"
       content="Web site created using React + Bootstrap"
     />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-76x76.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
